--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -24,5 +25,8 @@
     "nodemon": "^2.0.12",
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3"
+  },
+  "engines": {
+    "node": "16.6.2"
   }
 }
